made the mobile to slide in from top, fixed issue of the nav sliding over the logo and burger menu, by separing them and applying z-index

--- a/assets/src/css/main.css
+++ b/assets/src/css/main.css
@@ -54,17 +54,17 @@
 /* mobile nav styles */
 .navbar {
   position: absolute;
-  top: 64px;
-  bottom: 0;
-  height: 100vh;
+  top: 62;
+  left: 0;
+  height: min-content;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   width: 100%;
   visibility: hidden;
-  transform: translateX(100%);
+  transform: translateY(-100%);
   transition: transform 0.5s ease-in, visibility 0.5s ease-in;
-  flex-shrink: 1;
-  flex-grow: 1;
+  /* flex-shrink: 1;
+  flex-grow: 1; */
 }
 .navbar-active {
   transform: translateX(0);
