--- a/assets/src/css/output.css
+++ b/assets/src/css/output.css
@@ -578,10 +578,6 @@ video {
   position: relative;
 }
 
-.bottom-\[1rem\] {
-  bottom: 1rem;
-}
-
 .left-0 {
   left: 0px;
 }
@@ -598,8 +594,16 @@ video {
   top: 0.25rem;
 }
 
-.top-\[1rem\] {
-  top: 1rem;
+.z-0 {
+  z-index: 0;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .mb-2 {
@@ -678,6 +682,10 @@ video {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
@@ -721,6 +729,11 @@ video {
   background-color: rgb(5 10 31 / var(--tw-bg-opacity));
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .p-0 {
   padding: 0px;
 }
@@ -742,13 +755,40 @@ video {
   padding-bottom: 0.25rem;
 }
 
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
 .pl-4 {
   padding-left: 1rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-4 {
+  padding-top: 1rem;
+}
+
+.text-2xl {
+  font-size: clamp(1.60rem, calc(1.08rem + 2.59vw), 2.93rem);
+  line-height: 1.2;
 }
 
 .text-4xl {
   font-size: clamp(2.03rem, calc(1.03rem + 4.98vw), 4.58rem);
   line-height: 1;
+}
+
+.text-base {
+  font-size: clamp(1.13rem, calc(0.98rem + 0.73vw), 1.50rem);
+  line-height: 1.5;
+}
+
+.text-xl {
+  font-size: clamp(1.42rem, calc(1.06rem + 1.80vw), 2.34rem);
+  line-height: 1.4;
 }
 
 .tracking-wider {
@@ -772,6 +812,12 @@ video {
 
 .underline {
   text-decoration-line: underline;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .outline {
@@ -866,17 +912,18 @@ video {
 
 .navbar {
   position: absolute;
-  top: 64px;
-  bottom: 0;
-  height: 100vh;
+  top: 62;
+  left: 0;
+  height: -moz-min-content;
+  height: min-content;
   overflow-y: scroll;
   -webkit-overflow-scrolling: touch;
   width: 100%;
   visibility: hidden;
-  transform: translateX(100%);
+  transform: translateY(-100%);
   transition: transform 0.5s ease-in, visibility 0.5s ease-in;
-  flex-shrink: 1;
-  flex-grow: 1;
+  /* flex-shrink: 1;
+  flex-grow: 1; */
 }
 
 .navbar-active {
